# TELE

./: .gitignore  CMakeLists.txt  README.md  aarch64-toolchain.cmake  main  main.cpp  print_hwmon_info.cpp  print_uptime.cpp  tele.aarch64  telepix.h  unameload.cpp
build-aarch64/: CMakeCache.txt  Makefile  cmake_install.cmake  tele
